@@ -1,3 +1,7 @@
+2003-05-11  Eddy De Greef <eddy_de_greef at tiscali dot be>
+
+	* backend/mustek_pp.[ch]: Offset correction for Mustek 600CP and
+	  added some debugging code.
 
 2003-05-09  Rene Rebe <rene.rebe@gmx.net>
 
